# gecs

./: CMakeLists.txt  ReadMe.md  Todo.md
.github/workflows/: cmake-build.yaml
demo/: CMakeLists.txt
demo/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  copydll.cmake  fetch_sdl.cmake  utility.cmake
demo/include/: anim.hpp  common_systems.hpp  consts.hpp  defs.hpp  game_ctx.hpp  gaming_systems.hpp  pch.hpp  physics.hpp  renderer.hpp  restart_systems.hpp  sprite.hpp  tank.hpp  texture.hpp  ticker.hpp  vmath.hpp  welcome_systems.hpp  window.hpp
demo/src/: common_systems.cpp  game_ctx.cpp  gaming_systems.cpp  main.cpp  renderer.cpp  restart_systems.cpp  texture.cpp  welcome_systems.cpp  window.cpp
src/gecs/: config.hpp  entity.hpp  gecs.hpp  sparse_set.hpp
src/gecs/config/: config.hpp
src/gecs/container/: compress_pair.hpp  dense_map.hpp
src/gecs/core/: ident.hpp  singlton.hpp  type_list.hpp  utility.hpp
src/gecs/entity/: commands.hpp  entity.hpp  event_dispatcher.hpp  fwd.hpp  helper.hpp  querier.hpp  registry.hpp  registry_wrapper.hpp  resource.hpp  sigh_mixin.hpp  sparse_set.hpp  storage.hpp  system_constructor.hpp  world.hpp
src/gecs/signal/: delegate.hpp  dispatcher.hpp  fwd.hpp  sigh.hpp  sink.hpp
src/gecs/utilities/: utility.hpp
test/: CMakeLists.txt  catch.hpp  gecs_example.cpp  sparse_set.cpp
test/core/: CMakeLists.txt  type_list.cpp  utility.cpp
test/entity/: CMakeLists.txt  commands.cpp  entity.cpp  event_dispatcher.cpp  querier.cpp  registry.cpp  resource.cpp  sparse_set.cpp  storage.cpp  world.cpp
test/signal/: CMakeLists.txt  delegate.cpp  sigh.cpp  sink.cpp
